# shields

./: .gitignore  Cargo.toml  README.ja.md  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  input.rs  main.rs  output.rs
src/acl/: mod.rs  path.rs  rules.rs
src/check/: mod.rs  normalize.rs  patterns.rs  secrets.rs  unwrap.rs
tests/: integration.rs
