[package]
name = "shields"
version = "0.1.0"
edition = "2024"
description = "Claude Code security hook - bash guard and file ACL"
license = "MIT"

[[bin]]
name = "shields"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
shell-words = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
