[package]
name = "shields"
version = "0.3.0"
edition = "2024"
description = "Claude Code security hook - bash guard and file ACL"
license = "MIT"

[[bin]]
name = "shields"
path = "src/main.rs"

[dependencies]
clap = { version = ">=4", features = ["derive"] }
serde = { version = ">=1", features = ["derive"] }
serde_json = ">=1"
regex = ">=1"
shell-words = ">=1"

[dev-dependencies]
tempfile = ">=3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# absolute paths
absolute_paths = "deny"
# idiomatic iterators
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# imports
wildcard_imports = "deny"
enum_glob_use = "deny"
# strings
str_to_string = "deny"
# arguments
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
